# dwix_smartcontract

./: Cargo.toml  package-lock.json
neardev/: dev-account  dev-account.env
res/: dwix_smartcontract.wasm
src/: actions_of_project.rs  lib.rs  order.rs  page.rs  product.rs  project.rs
src/neardev/: dev-account  dev-account.env
